--- a/Monday_OOP_Inclass_Lecture-Completed.ipynb
+++ b/Monday_OOP_Inclass_Lecture-Completed.ipynb
@@ -1440,62 +1440,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18.0, {'Carrots': 2, 'Parrots': 3, 'Marrots': 4})\n",
-      "({'Parrots': 3, 'Marrots': 4}, 14.0)\n",
-      "186.0\n",
-      "99\n"
+      "\n",
+      "Welcome to the Macro Store!\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[78], line 117\u001b[0m\n\u001b[0;32m    115\u001b[0m             time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m6\u001b[39m)\n\u001b[0;32m    116\u001b[0m             clear_output()\n\u001b[1;32m--> 117\u001b[0m \u001b[43mwelcome\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[78], line 93\u001b[0m, in \u001b[0;36mwelcome\u001b[1;34m()\u001b[0m\n\u001b[0;32m     91\u001b[0m clear_output()\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m---> 93\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mWhat action would you like to choose for your cart today? \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43mWould you like to: Add, Remove, View, Checkout or Clear? \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mlower()\n\u001b[0;32m     94\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m response \u001b[38;5;129;01min\u001b[39;00m choices:\n\u001b[0;32m     95\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m response \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124madd\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py:1175\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1171\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1172\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1173\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1174\u001b[0m     )\n\u001b[1;32m-> 1175\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1176\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1177\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1178\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1179\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m   1180\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py:1217\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1214\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m   1215\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1216\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1217\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[0;32m   1218\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1219\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
    "source": [
-    "class ShoppingCart(object):\n",
+    "import time\n",
+    "import os\n",
+    "def clear_output():\n",
+    "    os.system(\"cls\" if os.name == \"nt\" else 'clear')\n",
+    "class Cart():\n",
     "    def __init__(self):\n",
-    "        self.total = 0\n",
-    "        self.items = {}\n",
-    "    def add_item(self,item_name,quantity,price):\n",
-    "        self.total += price*quantity\n",
-    "        self.items.update({item_name:quantity})\n",
-    "        return self.total,self.items\n",
-    "    def remove_item(self,item_name,quantity,price):\n",
-    "        if item_name in self.items:\n",
-    "            if quantity < self.items[item_name] and quantity > 0:\n",
-    "                self.items[item_name] -= quantity\n",
-    "                self.total -= price*quantity\n",
-    "            elif quantity >= self.items[item_name]:\n",
-    "                self.total -= price*self.items[item_name]\n",
-    "                del self.items[item_name]\n",
-    "            return self.items,self.total\n",
-    "    def checkout(self,cash_paid):\n",
-    "            if cash_paid >= self.total:\n",
-    "                return cash_paid - self.total\n",
+    "        self.cart = {}\n",
+    "# Add items to cart\n",
+    "    def add_to_cart(self):\n",
+    "        item = input(\"What would you like to add to your cart? \")\n",
+    "        if item in self.cart:\n",
+    "            how_many = int((input(f\"How many {item.title()} would you like to add? \")))\n",
+    "            self.cart[item]['how many'] += how_many\n",
+    "        else:\n",
+    "            price = float(input(f\"What is the price of {item.title()}? \"))\n",
+    "            how_many = int(input(f\"How many {item.title()}(s) would you like to add? \"))\n",
+    "            self.cart[item] = {'price':price, 'how many':how_many}\n",
+    "            clear_output()\n",
+    "            print(f'You have successfully added {self.cart[item][\"how many\"]} {item.title()}(s) to your cart! ')\n",
+    "            time.sleep(2)\n",
+    "            clear_output()\n",
+    "    # Remove items from cart\n",
+    "    def remove_from_cart(self):\n",
+    "        item = input(\"What would you like to remove from your cart? \")\n",
+    "        if item not in self.cart:\n",
+    "            clear_output()\n",
+    "            print(f\"{item.title()} is not currently in your cart. Please check your spelling and try again.\")\n",
+    "            time.sleep(5)\n",
+    "            clear_output()\n",
+    "        else:\n",
+    "            how_many = int((input(f\"How many {item.title()}(s) would you like to remove? \")))\n",
+    "            self.cart[item]['how many'] -= how_many\n",
+    "            if self.cart[item]['how many'] <= 0:\n",
+    "                del self.cart[item]\n",
+    "            clear_output()\n",
+    "            print(f'You have {self.cart[item][\"how many\"]} {item.title()}(s) left in your cart.')\n",
+    "            time.sleep(2)\n",
+    "            clear_output()\n",
+    "    # Show current items in cart without total\n",
+    "    def view_cart(self):\n",
+    "        if self.cart == {}:\n",
+    "            print(\"Your cart is empty. :(\")\n",
+    "            time.sleep(2)\n",
+    "            clear_output()\n",
+    "        else:\n",
+    "            print(\"Here is what you currently have in your cart:\")\n",
+    "            for item, info in self.cart.items():\n",
+    "                print(f\"\\n{info['how many']} {item.title()}(s) for ${info['price']:.2f} each.\")\n",
+    "            time.sleep(5)\n",
+    "            clear_output()\n",
+    "    # Clear cart of all items\n",
+    "    def clear_cart(self):\n",
+    "        if self.cart != {}:\n",
+    "            confirm = input(\"Please confirm you would like to clear your cart:\\nYes or No \").lower()\n",
+    "            if confirm == 'yes':\n",
+    "                clear_output()\n",
+    "                self.cart.clear()\n",
+    "                print(\"You've successfully cleared your cart!\")\n",
+    "                time.sleep(2)\n",
+    "                clear_output()\n",
     "            else:\n",
-    "                return \"Cash paid not enough\"\n",
-    "class Shop(ShoppingCart):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        self.quantity = 100\n",
-    "        \n",
-    "    def remove_item(self):\n",
-    "        if self.quantity > 0:\n",
-    "            self.quantity = self.quantity - 1\n",
-    "        return self.quantity\n",
-    "        \n",
-    "        \n",
-    "Object = ShoppingCart()\n",
-    "Object.add_item(\"Carrots\",2,2.00)\n",
-    "Object.add_item(\"Parrots\",3,2.00)\n",
-    "print(Object.add_item(\"Marrots\",4,2.00))\n",
-    "print(Object.remove_item(\"Carrots\",2,2.00))\n",
-    "print(Object.checkout(200))\n",
-    "Object = Shop()\n",
-    "print(Object.remove_item())"
+    "                clear_output()\n",
+    "                print(\"Ok, I've cancelled your clear request. Back to the beginning!\")\n",
+    "                time.sleep(3)\n",
+    "                confirm == 'no'\n",
+    "                clear_output()\n",
+    "        else:\n",
+    "            clear_output()\n",
+    "            print(\"Your cart is already empty.\")\n",
+    "            time.sleep(3)\n",
+    "            clear_output()\n",
+    "    # Checkout with receipt\n",
+    "    def checkout(self):\n",
+    "        if self.cart != {}:\n",
+    "            total = 0\n",
+    "            for item, info in self.cart.items():\n",
+    "                time\n",
+    "                print(f\"{info['how many']} {item.title()}(s) for ${info['price']:.2f} each.\\n\")\n",
+    "                total += info['how many'] * info['price']\n",
+    "            print(f'Your total is ${total:.2f}.\\n')\n",
+    "        else:\n",
+    "            print(\"You can't checkout. Your cart is empty.\")\n",
+    "            welcome()\n",
+    "    # Welcome intro\n",
+    "def welcome():\n",
+    "    choices = {'add', 'remove', 'view', 'clear', 'checkout'}\n",
+    "    cart = Cart()\n",
+    "    clear_output()\n",
+    "    print(\"\\nWelcome to the Macro Store!\")\n",
+    "    time.sleep(2)\n",
+    "    clear_output()\n",
+    "    while True:\n",
+    "        response = input(\"What action would you like to choose for your cart today? \\n\\nWould you like to: Add, Remove, View, Checkout or Clear? \").lower()\n",
+    "        if response in choices:\n",
+    "            if response == 'add':\n",
+    "                clear_output()\n",
+    "                cart.add_to_cart()\n",
+    "            elif response == 'remove':\n",
+    "                clear_output()\n",
+    "                cart.remove_from_cart()\n",
+    "            elif response == 'view':\n",
+    "                clear_output()\n",
+    "                cart.view_cart()\n",
+    "            elif response == 'clear':\n",
+    "                clear_output()\n",
+    "                cart.clear_cart()\n",
+    "            elif response == 'checkout':\n",
+    "                clear_output()\n",
+    "                cart.checkout()\n",
+    "                print(\"It was a pleasure doing business with you!\")\n",
+    "                break\n",
+    "        else:\n",
+    "            clear_output()\n",
+    "            print(f\"'{response.title()}' is not one of the available options.\\nPlease select from {choices}.\")\n",
+    "            time.sleep(6)\n",
+    "            clear_output()\n",
+    "welcome()"
    ]
   },
   {
@@ -1528,30 +1616,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "How much minutes did Bob play?50\n",
-      "Hope it was fun!\n",
-      "How much did Bob eat?50\n",
-      "Bob is full of energy! You should take Bob outside to play!\n",
-      "How much did Bob sleep?50\n",
-      "Here is the new energy level for Bob\n",
-      "100\n",
-      "How much minutes did Tom play?50\n",
-      "Hope it was fun!\n",
-      "How much did Tom eat?50\n",
-      "Tom is full of energy! You should take Tom outside to play!\n",
-      "How much did Tom sleep?30\n",
-      "Here is the new energy level for Tom\n",
-      "100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "def clear_output():\n",
@@ -1562,11 +1629,11 @@
     "        self.energy_level = energy_level\n",
     "        self.name = name\n",
     "    def play_time(self):\n",
-    "        energy_decrease = int(input(f\"How much minutes did {self.name.title()} play?\"))\n",
+    "        energy_decrease = int(input(f\"How much did {self.name.title()} play?\"))\n",
     "        clear_output()\n",
     "        self.energy_level = self.energy_level - (energy_decrease)\n",
     "        if self.energy_level <= 30:\n",
-    "            print(f\"{self.name.title()} is almost out of energy ! Please feed {self.name.title()} or let {self.name.title()} sleep to get some energy back!\")\n",
+    "            print(f\"{self.name.title()} is almost out of energy! Please feed {self.name.title()} or let {self.name.title()} sleep to get some energy back!\")\n",
     "        else:\n",
     "            print(f\"Hope it was fun!\")\n",
     "    def eat(self):\n",
@@ -1585,9 +1652,9 @@
     "        energy_increase = int(input(f\"How much did {self.name.title()} sleep?\"))\n",
     "        clear_output()\n",
     "        self.energy_level = self.energy_level + (energy_increase)\n",
-    "        if self.energy_level > 100:\n",
-    "            self.energy_level = 100\n",
-    "            print(f\"Here is the new energy level for {self.name.title()}\\n{self.energy_level}\")\n",
+    "        if self.energy_level <= 0:\n",
+    "            self.energy_level=0\n",
+    "            print(f\"{self.name.title()} is all out of energy with {self.energy_level} energy left.\\nPlease give {self.name.title()} food or let them sleep to get some more energy back!\")\n",
     "        else:\n",
     "            print(f\"Here is the new energy level for {self.name.title()}\\n{self.energy_level}\")\n",
     "animal1 = Animal('bob', 300)\n",
@@ -1597,6 +1664,7 @@
     "animal1.sleep()\n",
     "animal2.play_time()\n",
     "animal2.eat()\n",
+    "animal2.sleep()\n",
     "animal2.sleep()"
    ]
   },
