--- a/Monday_OOP_Inclass_Lecture-Starter.ipynb
+++ b/Monday_OOP_Inclass_Lecture-Starter.ipynb
@@ -957,15 +957,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name:  kev\n",
+      "Welcome to our store Kev\n",
+      "Would you like to add/remove/clear/checkout? add\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'response' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 29\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m response \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124madd\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     27\u001b[0m                 my_cart\u001b[38;5;241m.\u001b[39madd_to_cart()\n\u001b[1;32m---> 29\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[12], line 24\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     23\u001b[0m     reponse \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWould you like to add/remove/clear/checkout? \u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mlower()\n\u001b[1;32m---> 24\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[43mresponse\u001b[49m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124madd\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mremove\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshow\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclear\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcheckout\u001b[39m\u001b[38;5;124m\"\u001b[39m }:\n\u001b[0;32m     25\u001b[0m         reponse \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minvalid response. please select one of the options given\u001b[39m\u001b[38;5;124m'\u001b[39m )\n\u001b[0;32m     26\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m response \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124madd\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'response' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Create a class called cart that retains items and has methods to add, remove, and show\n",
     "\n",
     "class Cart():\n",
+    "    def __init__(self, customer_name):\n",
+    "        self.customer_name = customer_name.title()\n",
+    "        self.cart = []\n",
+    "        print(f\"Welcome to our store {self.customer_name}\")\n",
     "    pass\n",
-    "    "
+    "    \n",
+    "def add_to_cart(self):\n",
+    "    item_name = input('what item are you adding to your cart' ).lower()\n",
+    "    self.cart.append(item_name)\n",
+    "    print(f\"{item_name.title()} has been added to your cart\")\n",
+    "    print(self.cart)\n",
+    "    \n",
+    "def remove_from_cart(self):\n",
+    "    item_to_remove = input('What item would you like to remove from your cart? ').lower()\n",
+    "    if item_to_remove in self.cart:\n",
+    "        self.cart_remove(item_to_remove)\n",
+    "        print(f\"{item_to_remove.title()} is not in your cart, Silly goose!\")\n",
+    "    \n",
+    "    \n",
+    "def show_cart(self):\n",
+    "    unique_items = set(self.cart)\n",
+    "    print(f\" here is your cart, {self.customer_name}: \")\n",
+    "    for item in uniques_items:\n",
+    "        print(f\"\\t{item.ttle() x {self.cart.count(item)}\"\")\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def clear_cart(self):\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def main():\n",
+    "    name = input('Enter your name:  ')\n",
+    "    my_cart = Cart(name)\n",
+    "    while True:\n",
+    "        reponse = input('Would you like to add/remove/clear/checkout? ').lower()\n",
+    "        while response not in {\"add\", \"remove\", \"show\", \"clear\", \"checkout\" }:\n",
+    "            reponse = input('invalid response. please select one of the options given' )\n",
+    "            if response == \"add\":\n",
+    "                my_cart.add_to_cart()\n",
+    "            elif response == 'checkout':\n",
+    "                break\n",
+    "            elif response == \"remove\":\n",
+    "                my_cart.remove_from_cart\n",
+    "\n",
+    "\n",
+    "main()\n",
+    "        "
    ]
   },
   {
